--- a/about.html
+++ b/about.html
@@ -1,40 +1,31 @@
 <!DOCTYPE html>
+
 <html lang="en">
 
     <head>
-        <!-- TODO: add head content below -->
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Document</title>
         <link rel="stylesheet" text="text/css" href="./assets/css/style.css">
     </head>
-
+    
     <body>
-        <!-- TODO: add body content below -->
         <header>
-            <a href="./index.html" class="active">
+            <a href="./index.html">
                 <h3>Home</h3>
             </a>
             <nav>
                 <ul>
-                    <a href="./about.html">About</a>
+                    <a href="./about.html" class="active">About</a>
                     <a href="./experience.html">Experience</a>
                     <a href="./contact.html">Contact Me</a>
                     <a href="./resume.html">Resume</a>
                 </ul>
             </nav>
         </header>
-
-        <main>
-            <section></section>
-            <section></section>
-            <section></section>
-            <section></section>
-        </main>
     </body>
 
     <footer>
 
     </footer>
-
 </html>
