reverse engineered CSS style sheet

--- a/about.html
+++ b/about.html
@@ -16,13 +16,17 @@
             </a>
             <nav>
                 <ul>
-                    <a href="./about.html" class="active">About</a>
+                    <a href="./about.html">About</a>
                     <a href="./experience.html">Experience</a>
                     <a href="./contact.html">Contact Me</a>
                     <a href="./resume.html">Resume</a>
                 </ul>
             </nav>
         </header>
+
+        <main>
+            
+        </main>
     </body>
 
     <footer>
